Add db connection string

--- a/cody/appsettings.json
+++ b/cody/appsettings.json
@@ -1,10 +1,13 @@
 {
+  "ConnectionStrings": {
+    "CodyContext": "Host=localhost;Database=cody;Username=postgres;Password=dolcecharlotte12345"
+  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*"
 }
