--- a/cody/ClientApp/package.json
+++ b/cody/ClientApp/package.json
@@ -3,14 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
+    "@date-io/moment": "^2.10.6",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.2.10",
     "bootstrap": "^4.5.3",
+    "date-fns": "^2.16.1",
     "jquery": "^3.5.1",
     "merge": "^1.2.1",
+    "moment": "^2.29.1",
     "oidc-client": "^1.9.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-moment": "^1.1.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
