Use remote db and snake_case convention

--- a/cody/appsettings.json
+++ b/cody/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "CodyContext": "Host=localhost;Database=cody;Username=postgres;Password=dolcecharlotte12345"
+    "CodyContextLocal": "Host=localhost;Database=cody;Username=postgres;Password=dolcecharlotte12345",
+    "CodyContextRemote": "Host=185.229.236.134;Database=cody;Username=postgres;Password=d0lc&ch@rlotte15269"
   },
   "Logging": {
     "LogLevel": {
