--- a/cody/ClientApp/package.json
+++ b/cody/ClientApp/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.2.10",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "date-fns": "^2.16.1",
     "jquery": "^3.5.1",
