--- a/cody/ClientApp/package.json
+++ b/cody/ClientApp/package.json
@@ -7,6 +7,7 @@
     "@date-io/moment": "^2.10.6",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.2.10",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
