--- a/cody/appsettings.json
+++ b/cody/appsettings.json
@@ -3,6 +3,11 @@
     "CodyContextLocal": "Host=localhost;Database=cody;Username=postgres;Password=dolcecharlotte12345",
     "CodyContextRemote": "Host=185.229.236.134;Database=cody;Username=postgres;Password=d0lc&ch@rlotte15269"
   },
+  "SftpConnection": {
+    "Host": "185.229.236.134",
+    "Username": "cody_files",
+    "Password": "MGmj2X6BGmjgtqBddmJv"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
