Add email validation service

--- a/cody/appsettings.json
+++ b/cody/appsettings.json
@@ -8,6 +8,13 @@
     "Username": "cody_files",
     "Password": "MGmj2X6BGmjgtqBddmJv"
   },
+  "EmailServiceInfo": {
+    "Email": "2437Productions@gmail.com",
+    "Alias": "Cody Staff",
+    "Password": "d0lc&ch@rlotte_budda",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
