--- a/cody/ClientApp/package.json
+++ b/cody/ClientApp/package.json
@@ -22,7 +22,8 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "ajv": "^7.0.3",
