--- a/cody/ClientApp/package.json
+++ b/cody/ClientApp/package.json
@@ -18,6 +18,7 @@
     "oidc-client": "^1.10.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-indiana-drag-scroll": "^1.8.0",
     "react-moment": "^1.1.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
