--- a/cody/ClientApp/package.json
+++ b/cody/ClientApp/package.json
@@ -24,6 +24,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
+    "react-spring": "^8.0.27",
     "rimraf": "^3.0.2",
     "zxcvbn": "^4.4.2"
   },
