--- a/cody/ClientApp/package.json
+++ b/cody/ClientApp/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-easy-crop": "^3.3.1",
+    "react-fix-image-orientation": "^0.1.4",
     "react-indiana-drag-scroll": "^1.8.0",
     "react-moment": "^1.1.1",
     "react-router-bootstrap": "^0.25.0",
