fix orientation test

--- a/cody/ClientApp/package.json
+++ b/cody/ClientApp/package.json
@@ -10,8 +10,10 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.2.10",
     "axios": "^0.21.1",
+    "blueimp-load-image": "^5.14.0",
     "bootstrap": "^4.5.3",
     "date-fns": "^2.16.1",
+    "fix-image-rotation": "^2.0.0",
     "jquery": "^3.5.1",
     "merge": "^2.1.0",
     "moment": "^2.29.1",
