--- a/cody/ClientApp/package.json
+++ b/cody/ClientApp/package.json
@@ -10,10 +10,9 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.2.10",
     "axios": "^0.21.1",
-    "blueimp-load-image": "^5.14.0",
     "bootstrap": "^4.5.3",
     "date-fns": "^2.16.1",
-    "fix-image-rotation": "^2.0.0",
+    "exif-js": "^2.3.0",
     "jquery": "^3.5.1",
     "merge": "^2.1.0",
     "moment": "^2.29.1",
@@ -21,7 +20,6 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-easy-crop": "^3.3.1",
-    "react-fix-image-orientation": "^0.1.4",
     "react-indiana-drag-scroll": "^1.8.0",
     "react-moment": "^1.1.1",
     "react-router-bootstrap": "^0.25.0",
