--- a/cody/ClientApp/package.json
+++ b/cody/ClientApp/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@date-io/moment": "^2.10.6",
-    "@material-ui/core": "^4.11.2",
+    "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.2.10",
@@ -18,6 +18,7 @@
     "moment": "^2.29.1",
     "oidc-client": "^1.10.1",
     "react": "^17.0.1",
+    "react-data-table-component": "^6.11.7",
     "react-dom": "^17.0.1",
     "react-easy-crop": "^3.3.1",
     "react-moment": "^1.1.1",
@@ -26,6 +27,7 @@
     "react-scripts": "^4.0.1",
     "react-spring": "^8.0.27",
     "rimraf": "^3.0.2",
+    "styled-components": "^5.2.1",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
