--- a/cody/ClientApp/package.json
+++ b/cody/ClientApp/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "react-spring": "^8.0.27",
+    "react-window": "^1.8.6",
     "rimraf": "^3.0.2",
     "styled-components": "^5.2.1",
     "zxcvbn": "^4.4.2"
