Update email password

--- a/cody/appsettings.json
+++ b/cody/appsettings.json
@@ -11,7 +11,7 @@
   "EmailServiceInfo": {
     "Email": "2437Productions@gmail.com",
     "Alias": "Cody Staff",
-    "Password": "d0lc&ch@rlotte_budda",
+    "Password": "nebiycbwtceapwam",
     "Host": "smtp.gmail.com",
     "Port": 587
   },
