Add target and module to config

--- a/cody/ClientApp/jsconfig.json
+++ b/cody/ClientApp/jsconfig.json
@@ -1,6 +1,8 @@
 {
     "compilerOptions": {
-        "baseUrl": "."
+        "baseUrl": ".",
+        "target": "es6",
+        "module": "commonJS"
     },
     "include": ["src"],
     "exclude": ["node_modules","build"]
