--- a/cody/ClientApp/package.json
+++ b/cody/ClientApp/package.json
@@ -21,6 +21,7 @@
     "react-data-table-component": "^6.11.7",
     "react-dom": "^17.0.2",
     "react-easy-crop": "^3.3.3",
+    "react-html-parser": "^2.0.2",
     "react-moment": "^1.1.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
