--- a/cody/ClientApp/tsconfig.json
+++ b/cody/ClientApp/tsconfig.json
@@ -18,13 +18,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    
-    "declaration": true,
-    "emitDeclarationOnly": true,
-    "outDir": "types",
-
-    // "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "noEmit": true
   },
   "include": [
     "src"
