Update db credentials

--- a/cody/appsettings.json
+++ b/cody/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "CodyContextLocal": "Host=localhost;Database=cody;Username=postgres;Password=dolcecharlotte12345",
-    "CodyContextRemote": "Host=185.229.236.134;Database=cody;Username=postgres;Password=d0lc&ch@rlotte15269"
+    "CodyContextRemote": "Host=185.229.236.134;Database=cody;Username=postgres;Password=wYKHh8LzxyHF39bBHG3EQ7wEqjXSCMnV"
   },
   "SftpConnection": {
     "Host": "185.229.236.134",
