--- a/cody/ClientApp/package.json
+++ b/cody/ClientApp/package.json
@@ -10,6 +10,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@material-ui/pickers": "^3.3.10",
+    "@monaco-editor/react": "^4.1.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "date-fns": "^2.21.1",
